--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,25 @@ __pycache__/
 dataset_cache/
 data/
 wandb/
+build/
+dep
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+.vscode/
