--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,17 +4,21 @@ target-version = ['py311']
 
 [tool.ruff]
 line-length = 100
+target-version = "py311"
+
+[tool.ruff.lint]
+preview = true
 select = [
     "E", "F", "W", "B", "C4", "PIE", "NPY", "PLE",
+    "B035",
     "DTZ003", "DTZ004",
     "G010",
     "PLW0120", "PLW0129", "PLW0711", "PLW2101",
     "SIM101", "SIM110", "SIM201", "SIM202", "SIM222", "SIM223",
     "S506",
     "RET501", "RET502",
-    "RUF006", "RUF008", "RUF011", "RUF013", "RUF016", "RUF017", "RUF200",
+    "RUF006", "RUF008", "RUF013", "RUF016", "RUF017", "RUF200",
     "COM818", "COM819",
-    "ISC001",
     "PYI016", "PYI018", "PYI025",
     "PERF102",
     "UP006", "UP007",
@@ -46,10 +50,7 @@ unfixable = [
     "B006",
 ]
 
-target-version = "py311"
 
-[tool.ruff.lint]
-preview = true
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401", "F403"]
